deleted some images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Page Title -->
     <title>Savant HealthCare | Your Health Our Focus</title>
     <!-- Favicon -->
-    <link href="agency/img/favicon.ico" rel="icon">
+    <link href="agency/img/savant-logo.jpg" rel="icon">
     <!-- Bundle -->
     <link href="vendor/css/bundle.min.css" rel="stylesheet">
     <link href="vendor/css/revolution-settings.min.css" rel="stylesheet">
