edited phone numbers

--- a/index.html
+++ b/index.html
@@ -154,13 +154,12 @@
             <div class="shape-right">
                 <div class="full-menu-detail hide-cursor">
                     <h6 class="title">Contact Us</h6>
-                    <p><i class="fas fa-map-marker-alt"></i>ALO, 8450, Elland Street</p>
-                    <p><i class="fas fa-map-marker-alt"></i>Savant HealthCare, U.S.A</p>
-                    <p><i class="fas fa-mobile-alt"></i>+1 890 564</p>
-                    <p><i class="fas fa-mobile-alt"></i>+1 890 565</p>
-                    <p><i class="fas fa-mobile-alt"></i>+1 890 566</p>
+                    <p><i class="fas fa-map-marker-alt"></i>ALO, 8450, Atlanta</p>
+                    <p><i class="fas fa-map-marker-alt"></i>Savant HealthCare, Georgia</p>
+                    <p><i class="fas fa-mobile-alt"></i>+1 (404) 937-9879</p>
 
-                    <p><i class="fas fa-envelope"></i>andrea@savanthealthcare.org</p>
+
+                    <p><i class="fas fa-envelope"></i>info@savanthealthcare.org</p>
                 </div>
                 <img alt="shape" src="agency/img/shape-7.png">
             </div>
@@ -1381,15 +1380,13 @@
                             <span class="address-icon gradient-text2"><i aria-hidden="true"
                                                                          class="fas fa-phone-volume"></i></span>
                             <span class="address-text">
-                                <a class="mr-3" href="tel:184563">+1 84563</a>
-                                <a class="mr-3" href="tel:184562">+1 84562</a>
-                                <a class="mr-3" href="tel:184561">+1 84561</a>
+                                <a class="mr-3" href="tel:184563">+1 (404) 937-9879</a>
                             </span>
                         </li>
                         <li>
                             <span class="address-icon gradient-text2"><i aria-hidden="true"
                                                                          class="fas fa-paper-plane"></i></span>
-                            <span class="address-text"><a class="mr-3 alt-color" href="javascript:void(0)">andrea@savanthealthcare.org</a></span>
+                            <span class="address-text"><a class="mr-3 alt-color" href="mailto:info@savanthealthcare.org" >info@savanthealthcare.org</a></span>
                         </li>
                     </ul>
                 </div>
