finished on site changes, working on email form

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Page Title -->
     <title>Savant HealthCare | Your Health Our Focus</title>
     <!-- Favicon -->
-    <link href="agency/img/savant-logo-1.png" rel="icon">
+    <link href="agency/img/savant-logo.jpg" rel="icon">
     <!-- Bundle -->
     <link href="vendor/css/bundle.min.css" rel="stylesheet">
     <link href="vendor/css/revolution-settings.min.css" rel="stylesheet">
@@ -58,7 +58,7 @@
         <div class="container">
             <a class="logo link scroll" href="javascript:void(0)" title="Logo">
                 <!--Logo Default-->
-                <img alt="logo" class="logo-dark default" src="agency/img/savant-logo-1.png">
+                <img alt="logo" class="logo-dark default" src="agency/img/savant-logo.jpg">
             </a>
 
 
@@ -538,9 +538,11 @@
 
                          style="z-index: 17;">
                         <div class="rs-looped rs-slideloop" data-easing="" data-speed="5" data-xe="15" data-xs="-10"
-                             data-ye="0" data-ys="0"><img alt="" data-hh="['604px','510','510','510']"
+                             data-ye="0" data-ys="0">
+                            <!--<img alt="" data-hh="['604px','510','510','510']"
                                                           data-no-retina
-                                                          data-ww="['500px','350','350','350']" src="agency/img/vector-art-1.png"></div>
+                                                          data-ww="['500px','350','350','350']" src="agency/img/vector-art-1.png">-->
+                        </div>
                     </div>
 
                     <!-- LAYER NR. 14 -->
@@ -617,7 +619,7 @@
                 </div>
             </div>
             <div class="col-lg-6 wow fadeInRight">
-                <div class="half-img mt-20 pt-4 mt-lg-0 pt-lg-0" style="position: relative;top: 149px;left: 34px;">
+                <div class="half-img mt-20 pt-4 mt-lg-0 pt-lg-0">
                     <img alt="vector" src="agency/img/andrea_img.png">
                 </div>
             </div>
@@ -897,7 +899,7 @@
             </div>
             <div class="col-lg-6 wow fadeInLeft">
                 <div class="half-img mt-5 pt-4 mt-lg-0 pt-lg-0">
-                    <img alt="vector" src="agency/img/vector-art-3.png">
+                    <!--<img alt="vector" src="agency/img/vector-art-3.png">-->
                 </div>
             </div>
         </div>
@@ -1182,7 +1184,7 @@
             <div class="col-md-12">
                 <div class="heading-area mx-570 mb-5">
                     <h2 class="title text-white m-0">Some <span class="js-rotating">great, ideal</span> feedback from
-                        our patients</h2>
+                        our older adults.</h2>
                 </div>
             </div>
         </div>
@@ -1226,7 +1228,7 @@
                     </div>
                     <div class="item">
                         <p class="para">The process of admission is easy and smooth </p>
-                        <h5 class="name gradient-text1">John Doe</h5>
+                        <h5 class="name gradient-text1">John West</h5>
                         <ul class="ratings list-unstyled">
                             <li><i aria-hidden="true" class="fas fa-star"></i></li>
                             <li><i aria-hidden="true" class="fas fa-star"></i></li>
@@ -1288,22 +1290,42 @@
         <div class="owl-dots" id="testimonials-avatar">
             <!--data-position[top,right,bottom,left]-->
             <button class="owl-dot active" data-position="22%,auto,auto,5%">
-                <img alt="image" src="agency/img/avatar-1.png"></button>
+                <img alt="image" src="agency/img/services/nina_amber.jpg"></button>
             <button class="owl-dot active" data-position="30%,auto,auto,16%">
-                <img alt="image" src="agency/img/avatar-2.png"></button>
+                <img alt="image" src="agency/img/services/david_brooke.jpeg"></button>
             <button class="owl-dot active" data-position="auto,auto,38%,7%">
-                <img alt="image" src="agency/img/avatar-3.png"></button>
+                <img alt="image" src="agency/img/services/rose_barkley.jpg"></button>
             <button class="owl-dot active" data-position="auto,auto,23%,18%">
-                <img alt="image" src="agency/img/avatar-7.png"></button>
+                <img alt="image" src="agency/img/services/john_west.jpg"></button>
             <!--data-position[top,right,bottom,left]-->
             <button class="owl-dot active" data-position="20%,19%,auto,auto">
-                <img alt="image" src="agency/img/avatar-5.png"></button>
+                <img alt="image" src="agency/img/services/jane_harley.jpg"></button>
             <button class="owl-dot active" data-position="28%,6%,auto,auto">
                 <img alt="image" src="agency/img/avatar-6.png"></button>
             <button class="owl-dot active" data-position="40%,15%,auto,auto">
                 <img alt="image" src="agency/img/avatar-4.png"></button>
             <button class="owl-dot active" data-position="auto,21%,22%,auto">
                 <img alt="image" src="agency/img/avatar-2.png"></button>
+        </div>
+
+    </div>
+
+</section>
+<section class="gradient-bg1 text-center pt-5" >
+    <div class="container">
+        <h2 class="title text-white m-0">Our Gallery</h2>
+        <p class="para text-white font-italic text-center">When our older adults are happy, we are happy. We tend to their needs to ensure a productive and well kept elder citizen.</p>
+
+        <div class="row">
+            <div class="col-md-6">
+                <img src="agency/img/services/people_1.jpeg" width="400px" heigth="533px"/>
+                <p class="para text-white font-italic">A Happy Client.</p>
+            </div>
+            <div class="col-md-6">
+                <img src="agency/img/services/people_2.jpeg" width="400px" heigth="533px"/>
+                <p class="para text-white font-italic">Monitored exercise: Learn, Unlearn, Relearn.
+                </p>
+            </div>
         </div>
     </div>
 </section>
@@ -1339,11 +1361,11 @@
 
 <!--Map Start-->
 <div class="p-0 gradient-bg2 map-area">
-    <div class="container">
+    <div class="container row ml-0 justify-content-center col-12">
         <!--Map Initialize-->
         <div class="mapouter"><div class="gmap_canvas">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3319.8344060402874!2d-84.22142138526048!3d33.687351744318924!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88f5ab1997293f19%3A0x4817f49696326361!2sDunmore%20Rd%2C%20Georgia%2030034%2C%20USA!5e0!3m2!1sen!2ske!4v1666938277515!5m2!1sen!2ske" width="900" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:900px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:1100px;}</style></div></div>
+            <a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:900px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:auto;width:auto;}</style></div></div>
     </div>
 </div>
 <!--Map End-->
@@ -1398,7 +1420,9 @@
                     <h2 class="title mt-0">Get In Touch</h2>
                 </div>
                 <!--Contact Form-->
-                <form class="contact-form" id="contact-form-data">
+                <form class="contact-form" id="contact-form"
+                      method="post" name="contact_form"
+                      action="contact-form-handler.php">
                     <div class="row">
                         <!--Result-->
                         <div class="col-12" id="result"></div>
@@ -1406,15 +1430,16 @@
                         <!--Left Column-->
                         <div class="col-md-5">
                             <div class="form-group">
-                                <input class="form-control" id="quote_name" name="userName" placeholder="Name" required=""
+                                <input class="form-control" id="name"
+                                       name="name" placeholder="Name" required=""
                                        type="text">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" id="quote_email" name="userEmail" placeholder="Email" required=""
+                                <input class="form-control" id="email" name="email" placeholder="Email" required=""
                                        type="email">
                             </div>
                             <div class="form-group">
-                                <input class="form-control" id="quote_subject" name="userSubject" placeholder="Subject" required=""
+                                <input class="form-control" id="subject" name="subject" placeholder="Subject" required=""
                                        type="text">
                             </div>
                         </div>
@@ -1422,15 +1447,16 @@
                         <!--Right Column-->
                         <div class="col-md-7">
                             <div class="form-group">
-                                <textarea class="form-control" id="quote_message" name="userMessage"
-                                          placeholder="Message"></textarea>
+                                <textarea class="form-control" id="message" name="message" placeholder="Message"></textarea>
                             </div>
                         </div>
 
                         <!--Button-->
-                        <div class="col-md-12">
-                            <a class="btn btn-large btn-rounded btn-blue btn-hvr-white d-block mt-4 contact_btn" href="javascript:void(0);"
-                               id="submit_btn" onclick="processInquiry()"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i><b>Send Message</b>
+                        <div class="col-md-12 row justify-content-center">
+                            <button class="btn btn-large btn-rounded btn-blue btn-hvr-white d-block mt-4 contact_btn"
+                                    type="submit"
+                                    id="submit_btn"><i class="fa fa-spinner fa-spin mr-2 d-none" aria-hidden="true"></i>
+                                <b>Send Message</b>
                                 <div class="btn-hvr-setting">
                                     <ul class="btn-hvr-setting-inner">
                                         <li class="btn-hvr-effect"></li>
@@ -1439,17 +1465,13 @@
                                         <li class="btn-hvr-effect"></li>
                                     </ul>
                                 </div>
-                            </a>
+                            </button>
                         </div>
-
                     </div>
                 </form>
             </div>
-
         </div>
-
     </div>
-
 </section>
 <!--Contact End-->
 
@@ -1533,5 +1555,14 @@
 <script src="vendor/js/contact_us.js"></script>
 <script src="agency/js/script.js"></script>
 <script src="index.js"></script>
+<script language="JavaScript">
+    var frmvalidator  = new Validator("contact-form");
+    frmvalidator.addValidation("name","req","Please provide your name");
+    frmvalidator.addValidation("email","req","Please provide your email");
+    frmvalidator.addValidation("message","req","Please write a short description of your message");
+    frmvalidator.addValidation("email","email", "Please enter a valid email address");
+</script>
 </body>
+
+<!-- Mirrored from megaone.acrothemes.com/index-agency.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 14 Jun 2022 20:04:52 GMT -->
 </html>
